Make use of one .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -29,12 +29,17 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
+# production
+/build
+
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
 # Dependency directories
 node_modules/
 jspm_packages/
+/.pnp
+.pnp.js
 
 # TypeScript v1 declaration files
 typings/
@@ -62,3 +67,10 @@ typings/
 
 # SQLite database file
 *.db
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
