--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ bower_components
 .lock-wscript
 
 # production
-/build
+build/
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
